11/21 공지사항 등록 해야함
11/21 공지사항 등록 해야함

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    
+
 </head>
 
 <body id="page-top">
@@ -27,8 +27,9 @@
 
     <!-- 문의 -->
     <section class="page-section bg-dark" id="Question">
-        <div class="container px-4 px-lg-5">
+        <div class="scroll-container px-4 px-lg-5">
             <h2 class="text-center mt-0 text-white" style="font-family: SKYBORI; font-size:50px">문의하기</h2>
+
             <hr class="divider" />
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -82,7 +83,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1d36d8e3148cff96991f68bd2f32c26a"></script>
+    <script type="text/javascript"
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1d36d8e3148cff96991f68bd2f32c26a"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
