--- a/public/index.html
+++ b/public/index.html
@@ -25,58 +25,53 @@
 <body id="page-top">
     <div id="root"></div>
 
-    <!-- 문의 -->
-    <section class="page-section bg-dark" id="Question">
-        <div class="scroll-container px-4 px-lg-5">
-            <h2 class="text-center mt-0 text-white" style="font-family: SKYBORI; font-size:50px">문의하기</h2>
+    <section class="section bg-white">
+        <footer class="bg-light py-5">
 
-            <hr class="divider" />
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <div class="mb-2">
-                            <a href="https://map.naver.com/p/search/%EC%B6%A9%EC%B2%AD%EB%82%A8%EB%8F%84%20%EC%95%84%EC%82%B0%EC%8B%9C%20%ED%83%95%EC%A0%95%EB%A9%B4%20%EC%84%A0%EB%AC%B8%EB%A1%9C221%EB%B2%88%EA%B8%B8%2070/address/14145913.7728633,4411147.3249289,%EC%B6%A9%EC%B2%AD%EB%82%A8%EB%8F%84%20%EC%95%84%EC%82%B0%EC%8B%9C%20%ED%83%95%EC%A0%95%EB%A9%B4%20%EC%84%A0%EB%AC%B8%EB%A1%9C221%EB%B2%88%EA%B8%B8%2070,new?isCorrectAnswer=true&c=15.00,0,0,0,dh"
-                                target="_blank"><i class="bi-house fs-1 text-primary"></i></a>
+            <div class="container px-4 px-lg-5" style="text-align: center;">
+                <div class="row gx-4 gx-lg-5">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <h2 class="h2 mb-2" style="font-family: SKYBORI; font-size:20px; margin-bottom: -10%;">사업장 주소</h2>
+                            <div class="mb-2">
+                                <a href="https://map.naver.com/p/search/%EC%B6%A9%EC%B2%AD%EB%82%A8%EB%8F%84%20%EC%95%84%EC%82%B0%EC%8B%9C%20%ED%83%95%EC%A0%95%EB%A9%B4%20%EC%84%A0%EB%AC%B8%EB%A1%9C221%EB%B2%88%EA%B8%B8%2070/address/14145913.7728633,4411147.3249289,%EC%B6%A9%EC%B2%AD%EB%82%A8%EB%8F%84%20%EC%95%84%EC%82%B0%EC%8B%9C%20%ED%83%95%EC%A0%95%EB%A9%B4%20%EC%84%A0%EB%AC%B8%EB%A1%9C221%EB%B2%88%EA%B8%B8%2070,new?isCorrectAnswer=true&c=15.00,0,0,0,dh"
+                                    target="_blank"><i class="bi-house fs-1" style="color:black"></i></a>
+                            </div>
+                            <p class="text-muted mb-0" style="font-size: 15px; margin-top: -10%;">충청남도 아산시 탕정면 선문로221번길 70</p>
                         </div>
-                        <h2 class="h2 mb-2 text-white" style="font-family: SKYBORI; font-size:40px">사업장 주소</h2>
-                        <p class="text-muted mb-0" style="font-size: 18px;">충청남도 아산시 탕정면 선문로221번길 70</p>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center ">
-                    <div class="mt-5">
-                        <div class="mb-2"><i class="bi bi-telephone fs-1 text-primary"></i></div>
-                        <h2 class="h2 mb-2 text-white" style="font-family: SKYBORI; font-size:40px">문의 전화번호</h2>
-                        <p class="text-muted mb-0" style="font-size: 18px;">82+ 10-7766-3945</p>
+                    <div class="col-lg-3 col-md-6 text-center ">
+                        <div class="mt-5">
+                            <h2 class="h2 mb-2" style="font-family: SKYBORI; font-size:20px; margin-bottom: -10%;">문의 전화번호</h2>
+                            <div class="mb-2"><i class="bi bi-telephone fs-1" style="color:black"></i></div>
+                            <p class="text-muted mb-0" style="font-size: 15px; margin-top: -10%;">82+ 10-7766-3945</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <div class="mb-2"><a href="mailto:yhoka@naver.com"><i
-                                    class="bi bi-envelope fs-1 text-primary"></i></a></div>
-                        <h2 class="h2 mb-2 text-white" style="font-family: SKYBORI; font-size:40px">문의 이메일</h2>
-                        <p class="text-muted mb-0" style="font-size: 18px;">yhoka@naver.com</p>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <h2 class="h2 mb-2" style="font-family: SKYBORI; font-size:20px; margin-bottom: -10%;">문의 이메일</h2>
+                            <div class="mb-2"><a href="mailto:yhoka@naver.com"><i class="bi bi-envelope fs-1"
+                                        style="color:black"></i></a></div>
+                            <p class="text-muted mb-0" style="font-size: 15px; margin-top: -10%;">yhoka@naver.com</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <div class="mb-2"><a href="https://instagram.com/yeonghhak" target="_blank">
-                                <i class="bi bi-instagram fs-1 text-primary"></i>
-                            </a></div>
-                        <h2 class="h2 mb-2 text-white" style="font-family: SKYBORI; font-size:40px">instagram</h2>
-                        <p class="text-muted mb-0" style="font-size: 18px;">@yeonghhak</p>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <h2 class="h2 mb-2" style="font-family: SKYBORI; font-size:20px; margin-bottom: -10%;">인스타그램</h2>
+                            <div class="mb-2"><a href="https://instagram.com/yeonghhak" target="_blank">
+                                    <i class="bi bi-instagram fs-1" style="color:black"></i>
+                                </a></div>
+                            <p class="text-muted mb-0" style="font-size: 15px; margin-top: -10%;">@yeonghhak</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <div style="text-align: center;">Copyright &copy; 2023 - Sonagi</div>
+        </footer>
     </section>
 
 
-    <!-- 하단 푸터 -->
-    <footer class="bg-light py-5">
-        <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Copyright &copy; 2023 - Sonagi</div>
-        </div>
-    </footer>
+
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SimpleLightbox plugin JS-->
